force-app/main/default/objects/Payment_Information__c/Payment_Information__c.object-meta.xml
<CustomObject>
    <label>Payment Information</label>
    <nameField>
        <label>Payment Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>