force-app/main/default/objects/Payment_Information__c/fields/Amount_Charged_to_Card__c.field-meta.xml
<CustomField>
    <fullName>Amount_Charged_to_Card__c</fullName>
    <label>Amount Charged to Card</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>